Your commit message

--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -9,7 +9,7 @@
 
     <ShellContent 
         Title="Home" 
-        ContentTemplate="{DataTemplate local:LoginPage}"
-        Route="LoginPage" />
+        ContentTemplate="{DataTemplate local:SignUp}"
+        Route="SignUp" />
 
 </Shell>
